samples/_failures_safe/1761607519_237f62_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f6ae1dda.c: In function ‘main’:
./samples/SAFE/__tmp_f6ae1dda.c:168:5: error: expected expression at end of input
  168 |     if (decompressed.size ==
      |     ^~
./samples/SAFE/__tmp_f6ae1dda.c:168:5: error: expected declaration or statement at end of input
